--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,6 @@
 body {
+  background-position: 50% 50%;
+  background-repeat: repeat;
   display: flex;
   min-height: 100vh;
   flex-direction: column;
@@ -16,6 +18,14 @@ main {
 	position: relative;
     top: 80px;
     text-align: center;
-
-    
 }
+
+.hameid-loader-overlay {
+    width: 100%;
+    height: 100%;
+    z-index: 99999;
+    position: fixed;
+    background: #08a3b3;
+    height: 100%;
+}
+
